docs/v3.8.0/_sources/gallery/experiment/cylinder/cylinder_b11_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/cylinder/cylinder_b11_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_cylinder_cylinder_b11_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_cylinder_cylinder_b11_vs_diameter.py:


Cylinder: B1 Scattering Coefficient
===================================

This example demonstrates how to compute and visualize the B1 scattering coefficient as a function of diameter for cylindrical scatterers using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-17

.. code-block:: Python

    import numpy as np
    from TypedUnit import ureg

    from PyMieSim.experiment.scatterer import Cylinder
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Defining the source

.. GENERATED FROM PYTHON SOURCE LINES 19-26

.. code-block:: Python

    source = Gaussian(
        wavelength=400 * ureg.nanometer,  # 400 nm
        polarization=0 * ureg.degree,  # Linear polarization angle in radians
        optical_power=1e-3 * ureg.watt,  # 1 milliureg.watt
        NA=0.2 * ureg.AU  # Numerical Aperture
    )








.. GENERATED FROM PYTHON SOURCE LINES 27-28

Defining the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 28-35

.. code-block:: Python

    scatterer = Cylinder(
        diameter=np.linspace(100, 10000, 800) * ureg.nanometer,  # Diameters ranging from 100 nm to 10000 nm
        property=1.4 * ureg.RIU,  # Refractive index of the cylinder
        medium_property=1 * ureg.RIU,  # Refractive index of the surrounding medium
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 36-37

Setting up the experiment

.. GENERATED FROM PYTHON SOURCE LINES 37-39

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source)








.. GENERATED FROM PYTHON SOURCE LINES 40-41

Measuring the B1 scattering coefficient

.. GENERATED FROM PYTHON SOURCE LINES 41-43

.. code-block:: Python

    dataframe = experiment.get('b11')








.. GENERATED FROM PYTHON SOURCE LINES 44-46

Plotting the results
Visualizing how the B1 scattering coefficient varies with the cylinder diameter.

.. GENERATED FROM PYTHON SOURCE LINES 46-47

.. code-block:: Python

    dataframe.plot(x="scatterer:diameter")



.. image-sg:: /gallery/experiment/cylinder/images/sphx_glr_cylinder_b11_vs_diameter_001.png
   :alt: cylinder b11 vs diameter
   :srcset: /gallery/experiment/cylinder/images/sphx_glr_cylinder_b11_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='scatterer:diameter', ylabel='dimensionless'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.739 seconds)


.. _sphx_glr_download_gallery_experiment_cylinder_cylinder_b11_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cylinder_b11_vs_diameter.ipynb <cylinder_b11_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cylinder_b11_vs_diameter.py <cylinder_b11_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: cylinder_b11_vs_diameter.zip <cylinder_b11_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
